--- a/coaches.html
+++ b/coaches.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ITW 2024/25 - Paris 2024 Athletes</title>
+    <title>ITW 2024/25 - Paris 2024 Coaches</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
@@ -13,7 +13,8 @@
     <link rel="icon" href="Images/icon.png">
     <style>
         .bannerTop {
-            background-image: url('images/ateletos.jpeg'); 
+            background-image: url('images/o_treinador.jpeg');
+            background-position: top;
         }
     </style>
 </head>
@@ -66,29 +67,29 @@
             <h2 data-bind="text:displayName"></h2>
         </div>
         <div class="container bannerTop" ></div>
-        <!-- ko if:athletes().length > 0 -->
+        <!-- ko if:Coaches().length > 0 -->
         <div class="row small">
             <p class=" col-4 mr-auto pt-2">
                 <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-                <span data-bind="html: 'Athletes: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
+                <span data-bind="html: 'Coaches: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
             </p>
             <div class="col-8 my-0 pt-3">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                    <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './athletes.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                    <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './athletes.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
+                    <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './coaches.html?page=' + '1',  rel:'prev'}">⇤</a></li>
+                    <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './coaches.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
                     <!-- /ko -->
                     <!-- ko foreach: pageArray()-->
                     <!-- ko if:$data == $parent.currentPage() -->
                     <li class="active page-item"><a class="page-link" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
                     <!-- /ko -->
                     <!-- ko if:$data != $parent.currentPage() -->
-                    <li class="page-item"><a class="page-link" data-bind="attr: { href: './athletes.html?page=' + $data + '&pagesize=' + $parent.pagesize(), title:'Goto Page ' + $data }, text:$data"></a></li>
+                    <li class="page-item"><a class="page-link" data-bind="attr: { href: './coaches.html?page=' + $data + '&pagesize=' + $parent.pagesize(), title:'Goto Page ' + $data }, text:$data"></a></li>
                     <!-- /ko -->
                     <!-- /ko -->
                     <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                    <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './athletes.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                    <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './athletes.html?page=' + totalPages() }">⇥</a></li>
+                    <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './coaches.html?page=' + nextPage(), rel:'next' }">→</a></li>
+                    <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './coaches.html?page=' + totalPages() }">⇥</a></li>
                     <!-- /ko -->
                 </ul>
             </div>
@@ -100,28 +101,22 @@
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
-                    <th scope="col">Birth Date</th>
-                    <th scope="col">Birth Country</th>
-                    <th scope="col">Birth Place</th>
+                    <th scope="col">Fuction</th>
                     <th scope="col">Sex</th>
                     <th scope="col" class="text-right"></th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: athletes">
+            <tbody data-bind="foreach: Coaches">
                 <tr>
-                    <td class="align-middle" data-bind="text: Id"></td>
-                    <td class="align-middle" data-bind="text: Name"></td>
-                    <td class="align-middle" data-bind="text: BirthDate"></td>
-                    <td class="align-middle" data-bind="text: BirthCountry"></td>
-                    <td class="align-middle" data-bind="text: BirthPlace"></td>
-                    <td class="align-middle" data-bind="text: Sex"></td>
+                    <td class="align-middle" data-bind="text:Id"></td>
+                    <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="align-middle" data-bind="text:Function"></td>
+                    <td class="align-middle" data-bind="text:Sex"></td>
                     <td class="text-end">
-                        <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href: './athleteDetails.html?id=' + Id }">
-                            <i class="fa fa-eye" title="Show details"></i>
-                        </a>
-                        <button class="btn btn-default btn-xs" data-bind="click: function() { $parent.toggleFavorite($data) }">
-                            <i class="fa" data-bind="css: { 'fa-heart-o': !isFavorite(), 'fa-heart': isFavorite() }" title="Toggle favorite"></i>
-                        </button>
+                        <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href:'./coachesDetails.html?id=' + Id }"><i class="fa fa-eye" title="Show details"></i></a>
+                        <button class="btn btn-default btn-xs" data-bind="click: $parent.toggleFavorite">
+                            <i class="fa" data-bind="css: { 'fa-heart': isFavorite(), 'fa-heart-o': !isFavorite() }, attr : { 'id': 'favourite_' + Id }" title="Toggle favorite"></i>
+                        </button>                        
                     </td>
                 </tr>
             </tbody>
@@ -156,6 +151,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="theme.js"></script>
-    <script src="athletes.js"></script>
+    <script src="coaches.js"></script>
 </body>
 </html>
