--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="StyleSheet.css" rel="stylesheet" />
-    <link rel="shortcut icon" type="img/png" href="images/icon.png" />
+    <link rel="icon" href="Images/icon.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary border-bottom">
@@ -24,24 +24,27 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li id="atcolor"class="nav-item"><a class="nav-link" aria-current="page" href="athletes.html"><i class="fa fa-user-o text-primary"></i> Athletes</a></li>
-                    <li id="coachcolor"class="nav-item"><a class="nav-link" aria-current="page" href="xxx.html"><i class="fa fa-user-o text-warning"></i> Coaches</a></li>
-                    <li id="teamscolor"class="nav-item"><a class="nav-link" aria-current="page" href="xxx.html"><i class="fa fa-flag-o " style="color: black;"></i> Teams</a></li>
-                    <li id="tourchcolor:"class="nav-item"><a class="nav-link" aria-current="page" href="torch.html"><i class="fa fa-map-marker text-success"></i> Torch Route</a></li>
-                    <li id="modcolor"class="nav-item"><a class="nav-link" aria-current="page" href="xxx.html"><i class="fa fa-soccer-ball-o text-danger"></i> Modalities</a></li>
+                    <li id="coachcolor"class="nav-item"><a class="nav-link" aria-current="page" href="coaches.html"><i class="fa fa-user-o text-warning"></i> Coaches</a></li>
+                    <li id="teamscolor"class="nav-item"><a class="nav-link" aria-current="page" href="teams.html"><i class="fa fa-flag-o " style="color: black;"></i> Teams</a></li>
+                    <li id="tourchcolor:"class="nav-item"><a class="nav-link" aria-current="page" href="competitions.html"><i class="fa fa-trophy text-success"></i> Competitions</a></li>
+                    <li id="modcolor"class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i class="fa fa-soccer-ball-o text-danger"></i> Modalities</a></li>
                     <li class="dropdown">
                             <button class="btn dropdown-toggle nav-link" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fa fa-bars"></i> More
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item"href="xxx.html">
+                                <a class="dropdown-item"href="favoritos.html">
                                     <i class="fa fa-heart text-danger" aria-hidden="true"></i> Favourites
                                 </a>
-                                <a class="dropdown-item" href="xxx.html">
+                                <a class="dropdown-item" href="medals.html">
                                     <i class="fa fa-trophy text-warning" aria-hidden="true"></i> Medals
                                 </a>
-                                <a class="dropdown-item"  href="xxx.html">
+                                <a class="dropdown-item"  href="shop.html">
                                     <i class="fa fa-shopping-cart text-primary" aria-hidden="true"></i> Shop
+                                </a>
+                                <a class="dropdown-item"  href="torch.html">
+                                    <i class="fa fa-map-marker text-success" aria-hidden="true"></i> Torch Route
                                 </a>
                             </div>
                         </li>
@@ -67,7 +70,7 @@
                 <div class="d-block w-100" style="background: url('Images/banner1.png') center center; height: 600px; background-size: cover;" alt="First slide"></div>
             </div>
             <div class="carousel-item">
-                <div class="d-block w-100" style="background: url('Images/banner2.png') center center; height: 600px; background-size: cover;" alt="Second slide"></div>
+                <div class="d-block w-100" style="background: url('Images/banner2.jpeg') center center; height: 600px; background-size: cover;" alt="Second slide"></div>
             </div>
             <div class="carousel-item">
                 <div class="d-block w-100" style="background: url('Images/banner3.png') center center; height: 600px; background-size: cover;" alt="Third slide"></div>
@@ -196,7 +199,7 @@
     <nav class="navbar fixed-bottom bg-body-tertiary border-top">
         <div class="container small">
             <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2024/25</div>
-            <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for U by Hugo e Samuel.</div>
+            <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for JSP by Hugo e Samuel.</div>
             <div class="navbar-nav">
                 <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a></div>
             </div>
