--- a/teamsFav.html
+++ b/teamsFav.html
@@ -37,10 +37,10 @@
                                 <a class="dropdown-item"href="favoritos.html">
                                     <i class="fa fa-heart text-danger" aria-hidden="true"></i> Favourites
                                 </a>
-                                <a class="dropdown-item" href="xxx.html">
+                                <a class="dropdown-item" href="medals.html">
                                     <i class="fa fa-trophy text-warning" aria-hidden="true"></i> Medals
                                 </a>
-                                <a class="dropdown-item"  href="xxx.html">
+                                <a class="dropdown-item"  href="shop.html">
                                     <i class="fa fa-shopping-cart text-primary" aria-hidden="true"></i> Shop
                                 </a>
                                 <a class="dropdown-item"  href="torch.html">
@@ -58,9 +58,9 @@
         </div>
     </nav>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Favorite Teams</h1>
+        <h1 class="text-center mb-4">Favourite Teams</h1>
         <div class="alert alert-info" role="alert" id="noFavorites" style="display: none;">
-            No favorite Teams found.
+            No favourite Teams found.
         </div>
         <table class="table table-striped">
             <thead>
@@ -75,7 +75,6 @@
                 </tr>
             </thead>
             <tbody id="favoritesTable">
-                <!-- Rows will be dynamically added here -->
             </tbody>
         </table>
         <div style="text-align: center; margin-top: 50px;">
