--- a/cart.html
+++ b/cart.html
@@ -1,22 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ITW 2024/25 - Paris 2024 Athletes Details</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ITW 2024/25 - Paris 2024</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="StyleSheet.css" rel="stylesheet" />
+    <link href="shop.css" rel="stylesheet" />
     <link rel="icon" href="Images/icon.png">
-    <style>
-        .bannerTop {
-            background-image: url('images/grande_equipa_portugal.jpeg'); 
-            
-        }
-    </style>
+    <link rel="stylesheet" href="shop.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary border-bottom">
@@ -61,87 +58,32 @@
             </div>
         </div>
     </nav>
-
- <!-- Working Area -->
- <div class="container">
-    <div class="border-bottom py-2 mb-2">
-        <h2 data-bind="text:displayName"></h2>
-    </div>
-    <div class="container bannerTop" ></div>
-    <!-- ko if:Teams().length > 0 -->
-    <div class="row small">
-        <p class=" col-4 mr-auto pt-2">
-            <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-            <span data-bind="html: 'Teams: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
-        </p>
-        <div class="col-8 my-0 pt-3">
-            <ul class="pagination float-end">
-                <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './teams.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './teams.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
-                <!-- /ko -->
-                <!-- ko foreach: pageArray()-->
-                <!-- ko if:$data == $parent.currentPage() -->
-                <li class="active page-item"><a class="page-link" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
-                <!-- /ko -->
-                <!-- ko if:$data != $parent.currentPage() -->
-                <li class="page-item"><a class="page-link" data-bind="attr: { href: './teams.html?page=' + $data + '&pagesize=' + $parent.pagesize(), title:'Goto Page ' + $data }, text:$data"></a></li>
-                <!-- /ko -->
-                <!-- /ko -->
-                <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './teams.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './teams.html?page=' + totalPages() }">⇥</a></li>
-                <!-- /ko -->
-            </ul>
-        </div>
-    </div>
-    <!-- /ko -->
-
-    <table class="table table-striped table-sm small">
-        <thead class="table-secondary">
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-                <th scope="col">Sex</th>
-                <th scope="col">Country</th>
-                <th scope="col">Sports Code</th>
-                <th scope="col" class="text-right"></th>
-            </tr>
-        </thead>
-        <tbody data-bind="foreach: Teams">
-            <tr>
-                <td class="align-middle" data-bind="text:Id"></td>
-                <td class="align-middle" data-bind="text:Name"></td>
-                <td class="align-middle" data-bind="text:Sex"></td>
-                <td class="align-middle" data-bind="text:Country"></td>
-                <td class="align-middle" data-bind="text:Sport_Codes"></td>
-                <td class="text-end">
-                    <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href:'./teamsDetails.html?id=' + Id }"><i class="fa fa-eye" title="Show details"></i></a>
-                    <button class="btn btn-default btn-xs" data-bind="click: $parent.toggleFavorite">
-                        <i class="fa" data-bind="css: { 'fa-heart': isFavorite(), 'fa-heart-o': !isFavorite() }, attr : { 'id': 'favourite_' + Id }" title="Toggle favorite"></i>
-                    </button>    
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">
-                    <img src="images/Paris2024.png" height="30" /> Loading data...
-                </h5>
+    <div class="container" style="padding-top:60px;">
+        <div class="row">
+            <div class="col-10">
+                <h1>Shopping Cart</h1>
             </div>
-            <div class="modal-body text-center">
-                <i class="fa fa-spin fa-3x fa-refresh"></i>
+            <div class="col-2" style="display: grid;place-items: center;">
+                <a href="shop.html" class="cart-link">
+                    <button style=" padding: 0.5rem 1rem;border-radius: 5px;cursor: pointer;font-size: 1rem; background-color: #007bff;color: white;border: none;">
+                        Back to Store
+                    </button>
+                </a>
+                
             </div>
         </div>
+        <main>
+            <div id="cart-container">
+            </div>
+        </main>
+        <div class="row" style="display: grid;place-items: center; text-align: center;">
+            <a href="login.html"class="cart-link">
+                <button style=" padding: 0.5rem 1rem;border-radius: 5px;cursor: pointer;font-size: 1rem; background-color: #007bff;color: white;border: none;">
+                    Login
+                </button>
+            </a>
+        </div>
     </div>
-</div>
-<!-- End of Working Area -->
-
     <nav class="navbar fixed-bottom bg-body-tertiary border-top">
         <div class="container small">
             <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2024/25</div>
@@ -151,10 +93,9 @@
             </div>
         </div>
     </nav>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="theme.js"></script>
-    <script src="teams.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
