--- a/competitions.html
+++ b/competitions.html
@@ -41,10 +41,10 @@
                                 <a class="dropdown-item"href="favoritos.html">
                                     <i class="fa fa-heart text-danger" aria-hidden="true"></i> Favourites
                                 </a>
-                                <a class="dropdown-item" href="xxx.html">
+                                <a class="dropdown-item" href="medals.html">
                                     <i class="fa fa-trophy text-warning" aria-hidden="true"></i> Medals
                                 </a>
-                                <a class="dropdown-item"  href="xxx.html">
+                                <a class="dropdown-item"  href="shop.html">
                                     <i class="fa fa-shopping-cart text-primary" aria-hidden="true"></i> Shop
                                 </a>
                                 <a class="dropdown-item"  href="torch.html">
@@ -72,25 +72,25 @@
     <div class="row small">
         <p class=" col-4 mr-auto pt-2">
             <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-            <span data-bind="html: 'Teams: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
+            <span data-bind="html: 'Competitions: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
         </p>
         <div class="col-8 my-0 pt-3">
             <ul class="pagination float-end">
                 <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './teams.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './teams.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
+                <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './competitions.html?page=' + '1',  rel:'prev'}">⇤</a></li>
+                <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './competitions.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
                 <!-- /ko -->
                 <!-- ko foreach: pageArray()-->
                 <!-- ko if:$data == $parent.currentPage() -->
                 <li class="active page-item"><a class="page-link" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
                 <!-- /ko -->
                 <!-- ko if:$data != $parent.currentPage() -->
-                <li class="page-item"><a class="page-link" data-bind="attr: { href: './teams.html?page=' + $data + '&pagesize=' + $parent.pagesize(), title:'Goto Page ' + $data }, text:$data"></a></li>
+                <li class="page-item"><a class="page-link" data-bind="attr: { href: './competitions.html?page=' + $data + '&pagesize=' + $parent.pagesize(), title:'Goto Page ' + $data }, text:$data"></a></li>
                 <!-- /ko -->
                 <!-- /ko -->
                 <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './teams.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './teams.html?page=' + totalPages() }">⇥</a></li>
+                <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './competitions.html?page=' + nextPage(), rel:'next' }">→</a></li>
+                <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './competitions.html?page=' + totalPages() }">⇥</a></li>
                 <!-- /ko -->
             </ul>
         </div>
@@ -112,13 +112,11 @@
                 <td class="align-middle" data-bind="text:Name"></td>
                 <td class="align-middle" data-bind="text:Tag"></td>
                 <td class="text-end">
-                    <!-- Link para detalhes da competição -->
                     <a class="btn btn-default btn-light btn-xs" 
                        data-bind="attr: { href: './competitionsDetails.html?sportId=' + SportId + '&name=' + Name }">
                         <i class="fa fa-eye" title="Show details"></i>
                     </a>
                     
-                    <!-- Botão para alternar o favorito -->
                     <button class="btn btn-default btn-xs" 
                             data-bind="click: $root.toggleFavorite, css: { 'btn-danger': isFavorite(), 'btn-light': !isFavorite() }">
                         <i class="fa" 
