--- a/modalitiesFav.html
+++ b/modalitiesFav.html
@@ -37,10 +37,10 @@
                                 <a class="dropdown-item"href="favoritos.html">
                                     <i class="fa fa-heart text-danger" aria-hidden="true"></i> Favourites
                                 </a>
-                                <a class="dropdown-item" href="xxx.html">
+                                <a class="dropdown-item" href="medals.html">
                                     <i class="fa fa-trophy text-warning" aria-hidden="true"></i> Medals
                                 </a>
-                                <a class="dropdown-item"  href="xxx.html">
+                                <a class="dropdown-item"  href="shop.html">
                                     <i class="fa fa-shopping-cart text-primary" aria-hidden="true"></i> Shop
                                 </a>
                                 <a class="dropdown-item"  href="torch.html">
@@ -58,9 +58,9 @@
         </div>
     </nav>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Favorite Modalities</h1>
+        <h1 class="text-center mb-4">Favourite Modalities</h1>
         <div class="alert alert-info" role="alert" id="noFavorites" style="display: none;">
-            No favorite Modalities found.
+            No favourite Modalities found.
         </div>
         <table class="table table-striped">
             <thead>
@@ -76,7 +76,6 @@
                 </tr>
             </thead>
             <tbody id="favoritesTable">
-                <!-- Rows will be dynamically added here -->
             </tbody>
         </table>
         <div style="text-align: center; margin-top: 50px;">
